# freertos-boundary

./: .gitignore  EVK-MIMX8MM_manifest_v3_10.xml  EVK-MIMX8MM_manifest_v3_14.xml  EVK-MIMX8MM_manifest_v3_8.xml  EVK-MIMX8MM_manifest_v3_9.xml  EVK-MIMX8MN_manifest_v3_10.xml  EVK-MIMX8MN_manifest_v3_14.xml  EVK-MIMX8MN_manifest_v3_8.xml  EVK-MIMX8MN_manifest_v3_9.xml  EVK-MIMX8MP_manifest_v3_10.xml  EVK-MIMX8MP_manifest_v3_14.xml  EVK-MIMX8MP_manifest_v3_6.xml  EVK-MIMX8MP_manifest_v3_8.xml  EVK-MIMX8MP_manifest_v3_9.xml  EVK-MIMX8MQ_manifest_v3_10.xml  EVK-MIMX8MQ_manifest_v3_14.xml  EVK-MIMX8MQ_manifest_v3_2.xml  EVK-MIMX8MQ_manifest_v3_8.xml  EVK-MIMX8MQ_manifest_v3_9.xml  EVK-MIMX8ULP_manifest_v3_13.xml  EVK-MIMX8ULP_manifest_v3_14.xml  LA_OPT_Base_License.htm  LA_OPT_NXP_Software_License RTAudio.txt  LA_OPT_NXP_Software_License.txt  MCIMX93-EVK_manifest_v3_13.xml  MCIMX93-EVK_manifest_v3_14.xml  MIMX8MM6xxxKZ_manifest_v3_6.xml  MIMX8MN6xxxIZ_manifest_v3_6.xml  MIMX8MQ6xxxHZ_manifest_v3_6.xml  README.md  SW-Content-Register-FreeRTOS-BSP-1.0.1-i.MX6SX.txt  SW-Content-Register.txt
CMSIS/: CMSIS.yml  CMSIS_v2.yml  CMSIS_v3.yml
CMSIS/DSP/: CMSIS_DSP_Source_MIMX8ML8.cmake  README.md
CMSIS/Include/: CMSIS_Include_common_MIMX8ML8.cmake  CMSIS_Include_common_MIMX8MM6.cmake  CMSIS_Include_common_MIMX8MN6.cmake  CMSIS_Include_common_MIMX8MQ6.cmake  CMSIS_Include_core_cm4_MIMX8MM6.cmake  CMSIS_Include_core_cm4_MIMX8MQ6.cmake  CMSIS_Include_core_cm7_MIMX8ML8.cmake  CMSIS_Include_core_cm7_MIMX8MN6.cmake  CMSIS_Include_dsp_MIMX8ML8.cmake  CMSIS_Include_dsp_MIMX8MM6.cmake  CMSIS_Include_dsp_MIMX8MN6.cmake  CMSIS_Include_dsp_MIMX8MQ6.cmake  arm_math.h
CMSIS/NN/: README.md
CMSIS/RTOS2/: CMSIS_RTOS2_NonSecure.cmake  CMSIS_RTOS2_Secure.cmake
boards/evkmimx8ulp/dsp_examples/mu_interrupt/dsp/xcc/: CMakeLists.txt  build_debug.bat
boards/evkmimx8ulp/dsp_examples/voice_spot_demo/dsp/xcc/: CMakeLists.txt  build_all.bat  build_all.sh
boards/nitrogen8m/multicore_examples/rpmsg_lite_str_echo_rtos/armgcc/: CMakeLists.txt  MIMX8MQ6xxxJZ_cm4_ram.ld
boards/nitrogen8mn/: app_srtm.h
components/audio/: component_audio_sai_edma_adapter.MIMX8UD7.cmake
components/button/: component_button.MIMX8MQ6.cmake  component_button.MIMX8UD7.cmake  fsl_component_button.c  fsl_component_button.h
components/codec/: component_ak4497_adapter_MIMX8MM6.cmake  component_codec_adapters.MIMX8MQ6.cmake  component_codec_adapters.MIMX8UD7.cmake  component_codec_adapters_MIMX8ML8.cmake  component_codec_adapters_MIMX8MM6.cmake  component_codec_adapters_MIMX8MN6.cmake  component_da7212_adapter.MIMX8UD7.cmake  component_sgtl_adapter.MIMX8UD7.cmake  component_wm8524_adapter.MIMX8MQ6.cmake  component_wm8524_adapter_MIMX8MM6.cmake  component_wm8524_adapter_MIMX8MN6.cmake  component_wm8524_adapter_MIMX8MQ6.cmake  component_wm8960_adapter.MIMX8UD7.cmake  component_wm8960_adapter_MIMX8ML8.cmake  driver_codec.MIMX8MQ6.cmake  driver_codec.MIMX8UD7.cmake  driver_codec_MIMX8ML8.cmake  driver_codec_MIMX8MM6.cmake  driver_codec_MIMX8MN6.cmake  driver_codec_MIMX8MQ6.cmake  fsl_codec_common.c  fsl_codec_common.h
components/common_task/: component_common_task.MIMX9352.cmake  fsl_component_common_task.c  fsl_component_common_task.h
components/crc/: component_software_crc_adapter.MIMX8MQ6.cmake  component_software_crc_adapter.MIMX8UD7.cmake  fsl_adapter_crc.h  fsl_adapter_software_crc.c
components/extern_flash/: component_eeprom_AT25Fxxxx.MIMX8UD7.cmake  component_eeprom_AT25Fxxxx.MIMX9352.cmake  component_eeprom_AT45DBxxxx.MIMX8UD7.cmake  component_eeprom_AT45DBxxxx.MIMX9352.cmake  component_eeprom_InternalFlash.MIMX8UD7.cmake  component_eeprom_InternalFlash.MIMX9352.cmake
components/fxos8700cq/: driver_fxos8700cq.MIMX8UD7.cmake
components/gpio/: component_igpio_adapter.MIMX8MQ6.cmake  component_rgpio_adapter.MIMX8UD7.cmake  fsl_adapter_gpio.h  fsl_adapter_igpio.c  fsl_adapter_rgpio.c
components/i2c/: component_i3c_adapter.MIMX8UD7.cmake  component_i3c_adapter.MIMX9352.cmake  component_ii2c_adapter.MIMX8MQ6.cmake  component_ii2c_adapter_MIMX8ML8.cmake  component_ii2c_adapter_MIMX8MM6.cmake  component_lpi2c_adapter.MIMX8UD7.cmake  fsl_adapter_i2c.h  fsl_adapter_ii2c.c
components/i3c_bus/: component_i3c_bus.MIMX8UD7.cmake  component_i3c_bus_adapter.MIMX8UD7.cmake  fsl_component_i3c.c
components/led/: component_led.MIMX8MQ6.cmake  fsl_component_led.c  fsl_component_led.h
components/lists/: component_lists.MIMX8MQ6.cmake  component_lists.MIMX8UD7.cmake  component_lists_MIMX8ML8.cmake  component_lists_MIMX8MM6.cmake  component_lists_MIMX8MN6.cmake  component_lists_MIMX8MQ6.cmake  fsl_component_generic_list.h
components/lsm6dso/: driver_lsm6dso.MIMX8UD7.cmake  fsl_lsm.c  fsl_lsm.h
components/mem_manager/: component_mem_manager.MIMX8MQ6.cmake  component_mem_manager.MIMX8UD7.cmake  component_mem_manager_freertos.MIMX8MQ6.cmake  component_mem_manager_freertos.MIMX8UD7.cmake  component_mem_manager_freertos.MIMX9352.cmake  component_mem_manager_light.MIMX8MQ6.cmake  component_mem_manager_light.MIMX8UD7.cmake  fsl_component_mem_manager.c  fsl_component_mem_manager.h  fsl_component_mem_manager_light.c
components/osa/: component_osa.MIMX9352.cmake  component_osa_bm.MIMX9352.cmake  component_osa_free_rtos.MIMX9352.cmake  component_osa_interface.MIMX9352.cmake  component_osa_thread.MIMX9352.cmake  fsl_os_abstraction.h  fsl_os_abstraction_bm.c  fsl_os_abstraction_bm.h  fsl_os_abstraction_free_rtos.c  fsl_os_abstraction_free_rtos.h  fsl_os_abstraction_threadx.c  fsl_os_abstraction_threadx.h
components/panic/: component_panic.MIMX8MQ6.cmake  component_panic.MIMX8UD7.cmake  fsl_component_panic.c  fsl_component_panic.h
components/pca6416a/: driver_pca6416a.MIMX8MQ6.cmake  driver_pca6416a.MIMX8UD7.cmake  fsl_pca6416a.h
components/phy/: driver_mdio-common.MIMX9352.cmake  driver_phy-common_MIMX8MM6.cmake  fsl_mdio.h  fsl_phy.h
components/pwm/: component_pwm_tpm_adapter.MIMX8UD7.cmake
components/reset/: component_reset_adapter.MIMX8MQ6.cmake  component_reset_adapter.MIMX8UD7.cmake
components/rng/: fsl_adapter_rng.h  (+3 more)
(+9028 files in other folders)
